Bug 101981 - Commit ddc32537d6db69198e88ef0dfe19770bf9daa536 breaks rendering in multiple applications
Summary: Commit ddc32537d6db69198e88ef0dfe19770bf9daa536 breaks rendering in multiple ...
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Mesa core (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: mesa-dev
QA Contact: mesa-dev
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-07-31 12:40 UTC by network723
Modified: 2017-08-01 07:53 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description network723 2017-07-31 12:40:42 UTC
After ddc32537d6db69198e88ef0dfe19770bf9daa536 such applications as Chromium and Counter-Strike Global Offensive render a black screen, while Blender renders some gray rectangles.

Tested both with radeonsi and llvmpipe.
Comment 1 Samuel Pitoiset 2017-07-31 12:44:34 UTC
Thanks for reporting this.
Comment 2 Roland Scheidegger 2017-07-31 19:40:35 UTC
FWIW we're also seeing confirm failures with this change (llvmpipe):
conform/conform -v 2 -1 vpclamp.c -direct -D 2

Viewport Clamp test failed.
    File - vpclamp.c, line - 73.
        Viewport size not clamped to 8192, 8192.
    State Report. (Current) <-> (Default)
        GL_ATTRIB_STACK_DEPTH (State Information)
            1.00 <-> 0.00
        GL_VIEWPORT (State Information)
            -964689920.00 -964689920.00 99999.00 99999.00 <-> 0.00 0.00 100.00 100.00

Conform failed.
    Viewport Clamp test (Test number #2) failed.
Comment 3 Samuel Pitoiset 2017-07-31 19:43:41 UTC
Yeah, I have just sent a fix https://lists.freedesktop.org/archives/mesa-dev/2017-July/164829.html


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.